# filearchitect

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  IMPLEMENTATION_STATUS.md  IMPLEMENTATION_TASKS.md  LICENSE  PROJECT_OVERVIEW.md  README.md  SETUP.md  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
docs/developer/: guide.md
scripts/: setup_dev.bat  setup_dev.sh
src/filearchitect/: __init__.py
src/filearchitect/config/: __init__.py  manager.py  models.py  profiles.py
src/filearchitect/core/: __init__.py  constants.py  deduplication.py  detector.py  exceptions.py  logging.py  monitor.py  orchestrator.py  pipeline.py  scanner.py  session.py  sidecar.py  space.py
src/filearchitect/database/: __init__.py  manager.py  models.py  schema.py
src/filearchitect/processors/: __init__.py  audio.py  base.py  document.py  export.py  image.py  metadata.py  video.py
src/filearchitect/smart/: __init__.py
src/filearchitect/ui/: __init__.py
src/filearchitect/ui/cli/: __init__.py  display.py  main.py
src/filearchitect/ui/gui/: __init__.py  app.py  log_viewer.py  main_window.py  profiles_dialog.py  progress_widget.py  settings_dialog.py  summary_dialog.py  undo_dialog.py  worker.py
src/filearchitect/utils/: __init__.py  datetime.py  filesystem.py  hash.py  path.py
tests/: __init__.py  conftest.py
tests/integration/: __init__.py  test_workflows.py
tests/unit/: test_core.py  test_database.py  test_processors.py  test_space.py  test_utils.py
