[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "filearchitect"
version = "1.0.0"
description = "Intelligent file organization and deduplication tool for personal media collections"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "FileArchitect Team", email = "info@filearchitect.dev"}
]
keywords = ["file", "organization", "deduplication", "media", "photos", "videos"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Filesystems",
    "Topic :: Multimedia :: Graphics",
    "Topic :: Utilities",
]

dependencies = [
    "PyQt6>=6.5.0",
    "click>=8.1.0",
    "python-magic>=0.4.27",
    "Pillow>=10.0.0",
    "piexif>=1.1.3",
    "exifread>=3.0.0",
    "rawpy>=0.18.0",
    "pillow-heif>=0.13.0",
    "pillow-avif-plugin>=1.3.0",
    "imagehash>=4.3.0",
    "pymediainfo>=6.0.0",
    "ffmpeg-python>=0.2.0",
    "mutagen>=1.47.0",
    "pyacoustid>=1.3.0",
    "musicbrainzngs>=0.7.0",
    "pydantic>=2.4.0",
    "structlog>=23.1.0",
    "tqdm>=4.66.0",
    "keyring>=24.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.11.0",
    "pytest-qt>=4.2.0",
    "black>=23.9.0",
    "pylint>=3.0.0",
    "flake8>=6.1.0",
    "mypy>=1.5.0",
    "pre-commit>=3.4.0",
    "sphinx>=7.2.0",
    "sphinx-rtd-theme>=1.3.0",
]

[project.scripts]
filearchitect = "filearchitect.ui.cli.main:cli"
filearchitect-gui = "filearchitect.ui.gui.app:run_gui"

[project.urls]
Homepage = "https://github.com/filearchitect/filearchitect"
Documentation = "https://filearchitect.readthedocs.io"
Repository = "https://github.com/filearchitect/filearchitect"
Issues = "https://github.com/filearchitect/filearchitect/issues"

[tool.setuptools]
packages = ["filearchitect"]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
filearchitect = ["resources/**/*", "config/defaults/*.json"]

[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.pylint.main]
max-line-length = 100
disable = [
    "C0103",  # Invalid name (we use lowercase for some constants)
    "R0903",  # Too few public methods (data classes)
    "R0913",  # Too many arguments (complex functions need them)
]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_optional = true

[[tool.mypy.overrides]]
module = [
    "magic",
    "rawpy",
    "piexif",
    "exifread",
    "pymediainfo",
    "ffmpeg",
    "mutagen",
    "acoustid",
    "musicbrainzngs",
    "imagehash",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "7.4"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--verbose",
    "--cov=filearchitect",
    "--cov-report=html",
    "--cov-report=term-missing",
]

[tool.coverage.run]
source = ["src/filearchitect"]
omit = [
    "*/tests/*",
    "*/test_*.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
